--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+
 name: CI
 on:
   push:
@@ -5,20 +6,19 @@ on:
 
 jobs:
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     
     steps:
       - uses: actions/checkout@v3
 
-      #Skonfigurowanie dockera + buildx
+      #Skonfigurowanie buildxa
       - name: Buildx set-up
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2.2.1
         
       #Instalacja QEMU
       - name: Docker Setup QEMU
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-qemu-action@v2.1.0
 
       #Konfiguracja cachowania
       - name: Cache Docker layers
@@ -30,7 +30,7 @@ jobs:
             ${{ runner.os }}-buildx-
       #Logowanie do Dockerhuba
       - name: Login to DockerHub
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v2.1.0
         with:
           username: ${{secrets.USER_NAME}}
           password: ${{secrets.ACCESS_TOKEN}}
@@ -43,11 +43,10 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
           platforms: linux/arm/v7,linux/arm64/v8,linux/amd64 
-          context: ./
-          file: ./dockerfile
+          context: .
+          file: Dockerfile
           push: true
-          tags: |
-            panadam15/lab:ghfront1
+          tags: ${{secrets.USER_NAME}}/siedemLab:latest
       
       #Przenies cache'a
       - name: Move cache
