--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{secrets.USER_NAME}}/siedemLab:latest
+          tags: ${{secrets.USER_NAME}}/siedemlab:latest
       
       #Przenies cache'a
       - name: Move cache
