--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-          platforms: linux/arm/v7,linux/arm64/v8,linux/amd64 
+          platforms: linux/arm/v7,linux/arm64/v8
           context: .
           file: Dockerfile
           push: true
