--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
           platforms: linux/arm/v7,linux/arm64/v8
           context: .
-          file: Dockerfile
+          file: dockerfile.v1
           push: true
           tags: |
             panadam15/lab7:latest
