--- a/dockerfile.v1
+++ b/dockerfile.v1
@@ -3,8 +3,7 @@ FROM node:alpine
 WORKDIR '/app'
 ENV NODE_OPTIONS=--openssl-legacy-provider
 COPY package.json .
-RUN npm install -timeout=600000
-
+RUN npm install
 COPY . .
 
 CMD ["npm", "run", "start"]
